[gd_scene load_steps=3 format=3 uid="uid://cg8t8bfuugk4p"]

[ext_resource type="Script" path="res://addons/godot_helper_pack/core/control/pressable_menu_button.gd" id="1_1ltqp"]
[ext_resource type="Script" path="res://demos/core/control/pressable_menu_button_demo.gd" id="1_x2umv"]

[node name="PressableMenuButtonDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2umv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -254.0
offset_right = 300.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2

[node name="DocumentationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "A PressableMenuButton is a MenuButton extension that exposes the id_pressed() and id_focused() signals of the underlying PopupMenu.  Normally you have to call get_popup() on the MenuButton and connect the signals yourself.  Admittedly this is a small thing but something that should be included in the base MenuButton."
autowrap_mode = 2

[node name="PressableMenuButton" type="MenuButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Press Me to See Menu"
flat = false
item_count = 2
popup/item_0/text = "Item 1"
popup/item_0/id = 0
popup/item_1/text = "Item 2"
popup/item_1/id = 1
script = ExtResource("1_1ltqp")

[node name="OutputLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Output"

[node name="OutputTextEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
text = "Ready."

[node name="ClearOutputBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clear output"

[connection signal="id_focused" from="VBoxContainer/PressableMenuButton" to="." method="_on_pressable_menu_button_id_focused"]
[connection signal="id_pressed" from="VBoxContainer/PressableMenuButton" to="." method="_on_pressable_menu_button_id_pressed"]
[connection signal="pressed" from="VBoxContainer/ClearOutputBtn" to="." method="_on_clear_output_btn_pressed"]
